[package]
name = "touist-server"
version = "0.1.0"
authors = ["Sebastien Lacoste <contact@graphman.fr>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
regex = "0.2.2"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "0.2.9"

# This is a trick in order to avoid the rebuild of every dependency package.
# We only want our main.rs to be recompiled, the rest should be cached by
# docker. See: https://stackoverflow.com/a/39662015/3808537
[lib]
name = "dummy"
path = "dummy.rs"